--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           </div>
         </div>
         <div class="row text-center">
-            <div class="embed-responsive embed-responsive-16by9">
+            <div class="embed-responsive google-maps">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.276356447432!2d110.48790081461367!3d-6.976684570254947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e708d33c2dd435d%3A0xff63abd4ab13f8c!2sKantor%20Kelurahan%20Sembungharjo!5e0!3m2!1sid!2sid!4v1674692794428!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
