--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 <!-- owl Carousel -->
     <!-- Produk -->
     <section class="produk" id="produk">
-      <div class="container">
+      <div class="container" >
         <div class="row">
           <div class="col text-center">
-            <h1 class="heading">Produk</h1>
+            <h1 class="heading" data-aos="zoom-in" data-aos-duration="1500">Produk</h1>
           </div>
         </div>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4" data-aos="zoom-in" data-aos-duration="1500">
           <div class="col">
             <div class="card h-100">
               <img src="gambar/contoh 8.jpg" class="card-img-top img-produk " alt="...">
@@ -126,7 +126,7 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <a href="#" class="btn btn-primary btn-produk">Pesan Sekarang</a>
+                  <a href="https://wa.me/6287732783839" class="btn btn-primary btn-produk">Pesan Sekarang</a>
                 </div>
                 <div class="col-5">
                   <a class="btn harga">Rp. 500.000</a>
@@ -233,10 +233,10 @@
       <div class="container">
         <div class="row text-center">
           <div class="col">
-            <h1 class="heading">Lokasi Kami</h1>
+            <h1 class="heading"data-aos="zoom-in" data-aos-duration="1500">Lokasi Kami</h1>
           </div>
         </div>
-        <div class="row text-center">
+        <div class="row text-center" data-aos="zoom-in" data-aos-duration="1500">
             <div class="embed-responsive google-maps">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.276356447432!2d110.48790081461367!3d-6.976684570254947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e708d33c2dd435d%3A0xff63abd4ab13f8c!2sKantor%20Kelurahan%20Sembungharjo!5e0!3m2!1sid!2sid!4v1674692794428!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
