--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="#">UMKM Sembungharjo</a>
+        <a class="navbar-brand" href="#">
+          <img src="gambar/logo.png" alt="Logo" width="30" height="26" class="align-text-top">
+          UMKM Sembungharjo</a>
         <button
           class="navbar-toggler"
           type="button"
