--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a class="nav-link active" aria-current="page" href="#home">Home</a>
             <a class="nav-link" href="#produk">Produk</a>
             <a class="nav-link" href="#lokasi">Lokasi</a>
-            <a class="nav-link" href="#">Tentang Kami</a>
+            <a class="nav-link" href="https://www.instagram.com/lapak_sembungharjo/"><img src="gambar/Instagram-Logo.wine.png"  width="40" height="28" class="align-text-top" ></a>
           </div>
         </div>
       </div>
