--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="card h-100">
               <img src="gambar/contoh 8.jpg" class="card-img-top img-produk " alt="...">
               <div class="card-body">
-                <h5 class="card-title">Nama Produk</h5>
+                <h5 class="card-title">Snack </h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="row">
@@ -140,7 +140,7 @@
             <div class="card h-100">
               <img src="gambar/contoh 7.jpg" class="card-img-top img-produk" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Nama Produk</h5>
+                <h5 class="card-title">Produk</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
               <div class="row">
@@ -174,17 +174,17 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card h-100">
-              <img src="gambar/contoh 3.jpg" class="card-img-top img-produk " alt="...">
+              <img src="gambar/contoh 7.jpg" class="card-img-top img-produk " alt="...">
               <div class="card-body">
-                <h5 class="card-title">Nama Produk</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Telur Asin</h5>
+                <p class="card-text">Kami menyediakan produk Telur Asin yang dibuat dalam usaha rumahan. Kami juga melayani pesanan dalam jumlah yang besar.<br/> <br/>Hubungi kami dibawah ini! </p>
               </div>
               <div class="row">
                 <div class="col">
                   <a href="#" class="btn btn-primary btn-produk">Pesan Sekarang</a>
                 </div>
                 <div class="col-5">
-                  <a class="btn harga">Rp. 500.000</a>
+                  <a class="btn harga">Rp. 3.000</a>
                 </div>
               </div>
             </div>
@@ -193,15 +193,15 @@
             <div class="card h-100">
               <img src="gambar/contoh 4.jpg" class="card-img-top img-produk" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Nama Produk</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5 class="card-title">Lunpia</h5>
+                <p class="card-text">Lumpia semarang adalah makanan semacam rollade yang berisi rebung, telur, dan daging ayam atau udang. </p>
               </div>
               <div class="row">
                 <div class="col">
                   <a href="#" class="btn btn-primary btn-produk">Pesan Sekarang</a>
                 </div>
                 <div class="col-5">
-                  <a  class="btn harga">Rp. 500.000</a>
+                  <a  class="btn harga">Rp. 12.000</a>
                 </div>
               </div>
             </div>
@@ -210,15 +210,15 @@
             <div class="card h-100">
               <img src="gambar/contoh 5.jpg" class="card-img-top img-produk" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Nama Produk</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h5 class="card-title">Onde - Onde</h5>
+                <p class="card-text">Onde-onde adalah sejenis kue jajanan pasar yang terkenal di Indonesia. Onde-onde mudah ditemukan di pasar tradisional maupun dijual di pedagang kaki lima. </p>
               </div>
               <div class="row">
                 <div class="col ">
                   <a href="#" class="btn btn-primary btn-produk">Pesan Sekarang</a>
                 </div>
                 <div class="col-5">
-                  <a  class="btn harga">Rp. 500.000</a>
+                  <a  class="btn harga">Rp.10.000</a>
                 </div>
               </div>
             </div>
