--- a/index.html
+++ b/index.html
@@ -95,16 +95,19 @@
     <div class="container">
     <div class="owl-carousel owl-theme">
       <div class="item">
-        <img src="gambar/contoh 9.jpg" class="img-carousel">
+        <img src="gambar/IMG_7207 - Copy.JPG" class="img-carousel">
       </div>
       <div class="item">
-        <img src="gambar/contoh 8.jpg" class="img-carousel">
+        <img src="gambar/IMG_1479.jpg" class="img-carousel">
       </div>
       <div class="item">
-        <img src="gambar/contoh 11.jpg" class="img-carousel">
+        <img src="gambar/IMG_7169.jpg" class="img-carousel">
       </div>
       <div class="item">
-        <img src="gambar/contoh 10.jpg" class="img-carousel">
+        <img src="gambar/tim.jpg" class="img-carousel">
+      </div>
+      <div class="item">
+        <img src="gambar/rembuk.jpg" class="img-carousel">
       </div>
     </div>
   </div>
@@ -121,51 +124,53 @@
         <div class="row row-cols-1 row-cols-md-3 g-4" data-aos="zoom-in" data-aos-duration="1500">
           <div class="col">
             <div class="card h-100">
-              <img src="gambar/contoh 8.jpg" class="card-img-top img-produk " alt="...">
+              <img src="gambar/snack.jpg" class="card-img-top img-produk " alt="...">
               <div class="card-body">
                 <h5 class="card-title">Snack </h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">Aneka snack, snack stik bawang renyah tersedia berbagai macam rasa balado, gurih. </p>
               </div>
               <div class="row">
                 <div class="col">
                   <a href="https://wa.me/6287732783839" class="btn btn-primary btn-produk">Pesan Sekarang</a>
                 </div>
                 <div class="col-5">
-                  <a class="btn harga">Rp. 500.000</a>
+                  <a class="btn harga">Rp. 7.000</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="gambar/contoh 7.jpg" class="card-img-top img-produk" alt="...">
+              <img src="gambar/bawang goreng.jpg" class="card-img-top img-produk" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Produk</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5 class="card-title">Bawang Goreng</h5>
+                <p class="card-text"> Bumbu tabur yang lazim digunakan sebagai garnis pelengkap atau penyedap yang ditaburkan di atas aneka masakan Indonesia .</p>
               </div>
               <div class="row">
                 <div class="col">
                   <a href="#" class="btn btn-primary btn-produk">Pesan Sekarang</a>
                 </div>
                 <div class="col-5">
-                  <a class="btn harga">Rp. 500.000</a>
+                  <a class="btn harga">Rp. 7.000</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="gambar/contoh 2.jpg" class="card-img-top img-produk" alt="...">
+              <img src="gambar/kecaap.jpg" class="card-img-top img-produk" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Nama Produk</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h5 class="card-title">Kecap Jago Bangkok</h5>
+                <p class="card-text">
+                  Kecap Manis Asli Juwana <br/>
+                Dengan kemasan 300 ml</p>
               </div>
               <div class="row">
                 <div class="col ">
                   <a href="#" class="btn btn-primary btn-produk">Pesan Sekarang</a>
                 </div>
                 <div class="col-5">
-                  <a  class="btn harga">Rp. 500.000</a>
+                  <a  class="btn harga">Rp. 11.000</a>
                 </div>
               </div>
             </div>
