--- a/index.html
+++ b/index.html
@@ -213,17 +213,17 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="gambar/contoh 5.jpg" class="card-img-top img-produk" alt="...">
+              <img src="gambar/donat.jpg" class="card-img-top img-produk" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Onde - Onde</h5>
-                <p class="card-text">Onde-onde adalah sejenis kue jajanan pasar yang terkenal di Indonesia. Onde-onde mudah ditemukan di pasar tradisional maupun dijual di pedagang kaki lima. </p>
+                <h5 class="card-title">Donat</h5>
+                <p class="card-text"> Sedia Donut Berbagai macam rasa, harga murah rasa merakyat </p>
               </div>
               <div class="row">
                 <div class="col ">
                   <a href="#" class="btn btn-primary btn-produk">Pesan Sekarang</a>
                 </div>
                 <div class="col-5">
-                  <a  class="btn harga">Rp.10.000</a>
+                  <a  class="btn harga">Rp.3.000</a>
                 </div>
               </div>
             </div>
